--- a/main/package.json
+++ b/main/package.json
@@ -15,6 +15,7 @@
     "amqplib": "^0.10.4",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "uuid": "^10.0.0"
   },
