--- a/main/package.json
+++ b/main/package.json
@@ -17,12 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
